k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signbell-backend-deployment
  namespace: default
  labels:
    app: signbell-backend
spec:
  replicas: 2 # 필요시 조정
  selector:
    matchLabels:
      app: signbell-backend
  template:
    metadata:
      labels:
        app: signbell-backend
    spec:
      imagePullSecrets:
      - name: ecr-registry-secret
      containers:
      - name: signbell-backend
        # 이미지는 Jenkins Pipeline에서 동적으로 업데이트
        image: 801490935747.dkr.ecr.ap-northeast-2.amazonaws.com/signbell-backend
        imagePullPolicy: Always
        ports:
        - containerPort: 8443
          name: http
          protocol: TCP
        
        resources:
          requests:
            cpu: "250m"      # 0.25 vCPU
            memory: "1Gi"  # 512 MiB
          limits:
            cpu: "500m"      # 0.5 vCPU
            memory: "2Gi"    # 1 GiB
        
        # Readiness Probe (트래픽 받을 준비 확인)
        readinessProbe:
          tcpSocket:
            port: 8443
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        
        # Liveness Probe (컨테이너 살아있는지 확인)
        livenessProbe:
          tcpSocket:
            port: 8443
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        
        # Startup Probe (초기 시작 확인)
        startupProbe:
          tcpSocket:
            port: 8443
          initialDelaySeconds: 50
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 30
      
      # 재시작 정책
      restartPolicy: Always
